--- a/____Template/index.html
+++ b/____Template/index.html
@@ -137,33 +137,33 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Most Popular Categories</h2>
-                        <p>Travelocity empowers travelers who are giving back on their trips in ways big and small</p>
+                        <h2>Dành Cho Người Tìm Việc</h2>
+                        <p>Việc làm gì cũng có đừng sợ khó mà lắng lo.</p>
                     </div>
                     <div class="categories__item__list">
                         <div class="categories__item">
                             <img src="img/categories/cat-1.png" alt="">
-                            <h5>Food & Drink</h5>
+                            <h5>Việc làm quản lý</h5>
                             <span>78 Listings</span>
                         </div>
                         <div class="categories__item">
                             <img src="img/categories/cat-2.png" alt="">
-                            <h5>Restaurent</h5>
+                            <h5>Việc làm chuyên môn</h5>
                             <span>32 Listings</span>
                         </div>
                         <div class="categories__item">
                             <img src="img/categories/cat-3.png" alt="">
-                            <h5>Hotels</h5>
+                            <h5>Lao động phổ thông</h5>
                             <span>16 Listings</span>
                         </div>
                         <div class="categories__item">
                             <img src="img/categories/cat-4.png" alt="">
-                            <h5>Beauty & Spa</h5>
+                            <h5>Bán thời gian</h5>
                             <span>55 Listings</span>
                         </div>
                         <div class="categories__item">
                             <img src="img/categories/cat-5.png" alt="">
-                            <h5>Shopping</h5>
+                            <h5>Việc làm toàn thời gian</h5>
                             <span>23 Listings</span>
                         </div>
                     </div>
@@ -179,8 +179,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>The Most Searched Services</h2>
-                        <p>Travelocity empowers travelers who are giving back on their trips in ways big and small</p>
+                        <h2>Các Việc Làm Được Tìm Kiếm Nhiều Nhất</h2>
+                        <p>Việc làm gì cũng có đừng sợ khó mà lắng lo.</p>
                     </div>
                 </div>
             </div>
@@ -1400,8 +1400,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Top Featured Locations</h2>
-                        <p>Explore restaurants, bars, and cafés by locality</p>
+                        <h2>Các Địa Điểm Việc Làm Nổi Bật</h2>
+                        <p>Khám phá việc làm top 4 thành phố</p>
                     </div>
                 </div>
             </div>
@@ -1410,7 +1410,7 @@
                     <a href="#" class="feature__location__item large-item set-bg"
                         data-setbg="img/feature-location/fl-1.jpg">
                         <div class="feature__location__item__text">
-                            <h5>Washington, D.C</h5>
+                            <h5>Hồ Chí Minh</h5>
                             <ul>
                                 <li>2045 Listings</li>
                                 <li>3648 Users</li>
@@ -1424,7 +1424,7 @@
                             <a href="#" class="feature__location__item set-bg"
                                 data-setbg="img/feature-location/fl-2.jpg">
                                 <div class="feature__location__item__text">
-                                    <h5>Chicago</h5>
+                                    <h5>Cà Mau</h5>
                                 </div>
                             </a>
                         </div>
@@ -1432,14 +1432,14 @@
                             <a href="#" class="feature__location__item set-bg"
                                 data-setbg="img/feature-location/fl-3.jpg">
                                 <div class="feature__location__item__text">
-                                    <h5>San Antonio</h5>
+                                    <h5>Quảng Ngãi</h5>
                                 </div>
                             </a>
                         </div>
                     </div>
                     <a href="#" class="feature__location__item set-bg" data-setbg="img/feature-location/fl-4.jpg">
                         <div class="feature__location__item__text">
-                            <h5>Los Angeles</h5>
+                            <h5>Tam Kỳ</h5>
                         </div>
                     </a>
                 </div>
