--- a/____Template/listing.html
+++ b/____Template/listing.html
@@ -168,8 +168,8 @@
     <section class="listing nice-scroll">
         <div class="listing__text__top">
             <div class="listing__text__top__left">
-                <h5>Restaurants</h5>
-                <span>18 Results Found</span>
+                <h5>Danh Sách Việc Làm</h5>
+                <span>18 công việc được tìm thấy</span>
             </div>
             <div class="listing__text__top__right">Nearby <i class="fa fa-sort-amount-asc"></i></div>
         </div>
@@ -207,7 +207,7 @@
                             <img src="img/listing/list_small_icon-1.png" alt="">
                             <span>Restaurant</span>
                         </div>
-                        <div class="listing__item__text__info__right">Open Now</div>
+                        <div class="listing__item__text__info__right">Chi Tiết</div>
                     </div>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                             <img src="img/listing/list_small_icon-2.png" alt="">
                             <span>Food & Drink</span>
                         </div>
-                        <div class="listing__item__text__info__right closed">Closed</div>
+                        <div class="listing__item__text__info__right">Chi Tiết</div>
                     </div>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                             <img src="img/listing/list_small_icon-3.png" alt="">
                             <span>Hotel</span>
                         </div>
-                        <div class="listing__item__text__info__right closed">Closed</div>
+                        <div class="listing__item__text__info__right">Chi Tiết</div>
                     </div>
                 </div>
             </div>
@@ -318,7 +318,7 @@
                             <img src="img/listing/list_small_icon-1.png" alt="">
                             <span>Restaurant</span>
                         </div>
-                        <div class="listing__item__text__info__right">Open Now</div>
+                        <div class="listing__item__text__info__right">Chi Tiết</div>
                     </div>
                 </div>
             </div>
@@ -355,7 +355,7 @@
                             <img src="img/listing/list_small_icon-4.png" alt="">
                             <span>Shopping</span>
                         </div>
-                        <div class="listing__item__text__info__right">Open Now</div>
+                        <div class="listing__item__text__info__right">Chi Tiết</div>
                     </div>
                 </div>
             </div>
@@ -392,7 +392,7 @@
                             <img src="img/listing/list_small_icon-3.png" alt="">
                             <span>Hotel</span>
                         </div>
-                        <div class="listing__item__text__info__right">Open Now</div>
+                        <div class="listing__item__text__info__right">Chi Tiết</div>
                     </div>
                 </div>
             </div>
@@ -401,10 +401,7 @@
     <!-- Listing Section End -->
 
     <!-- Map Begin -->
-    <div class="listing__map">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423283.43556031643!2d-118.69192431097179!3d34.020730495817475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1586670019340!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </div>
+
     <!-- Map End -->
 
     <!-- Js Plugins -->
