--- a/____Template/listing.html
+++ b/____Template/listing.html
@@ -169,7 +169,7 @@
         <div class="listing__text__top">
             <div class="listing__text__top__left">
                 <h5>Danh Sách Việc Làm</h5>
-                <span>18 công việc được tìm thấy</span>
+                <span>18 Công việc được tìm thấy</span>
             </div>
             <div class="listing__text__top__right">Nearby <i class="fa fa-sort-amount-asc"></i></div>
         </div>
