--- a/public/home/listing-details.html
+++ b/public/home/listing-details.html
@@ -116,32 +116,22 @@
                     <div class="listing__details__text">
                         <div class="listing__details__about">
                             <h4>Overview</h4>
-                            <p>Entries from over 70 countries cover every imaginable space; From ships to airports,
-                                museums to burger vans, from revered Michelin-starred establishments to the fleeting
-                                dynamism of pop-ups.</p>
-                            <p>The judges are the most influential global personalities from hospitality, design and
-                                lifestyle media and have previously included the Editor in Chief of Wallpaper*, Marcus
-                                Wareing and Thomas Heatherwick.
-                                The Awards are followed by over 40,000 of the most influential architects, designers,
-                                hospitality professionals and lifestyle media from around the globe.</p>
+                            <p>Entries from over 70 countries cover every imaginable space; From ships to airports, museums to burger vans, from revered Michelin-starred establishments to the fleeting dynamism of pop-ups.</p>
+                            <p>The judges are the most influential global personalities from hospitality, design and lifestyle media and have previously included the Editor in Chief of Wallpaper*, Marcus Wareing and Thomas Heatherwick. The Awards are followed
+                                by over 40,000 of the most influential architects, designers, hospitality professionals and lifestyle media from around the globe.</p>
                         </div>
                         <div class="listing__details__gallery">
                             <h4>Gallery</h4>
                             <div class="listing__details__gallery__pic">
                                 <div class="listing__details__gallery__item">
-                                    <img class="listing__details__gallery__item__large"
-                                        src="img/listing/details/listing-details-1.jpg" alt="">
+                                    <img class="listing__details__gallery__item__large" src="img/listing/details/listing-details-1.jpg" alt="">
                                     <span><i class="fa fa-camera"></i> 170 Image</span>
                                 </div>
                                 <div class="listing__details__gallery__slider owl-carousel">
-                                    <img data-imgbigurl="img/listing/details/listing-details-1.jpg"
-                                        src="img/listing/details/thumb-1.jpg" alt="">
-                                    <img data-imgbigurl="img/listing/details/listing-details-1.jpg"
-                                        src="img/listing/details/thumb-2.jpg" alt="">
-                                    <img data-imgbigurl="img/listing/details/listing-details-1.jpg"
-                                        src="img/listing/details/thumb-3.jpg" alt="">
-                                    <img data-imgbigurl="img/listing/details/listing-details-1.jpg"
-                                        src="img/listing/details/thumb-4.jpg" alt="">
+                                    <img data-imgbigurl="img/listing/details/listing-details-1.jpg" src="img/listing/details/thumb-1.jpg" alt="">
+                                    <img data-imgbigurl="img/listing/details/listing-details-1.jpg" src="img/listing/details/thumb-2.jpg" alt="">
+                                    <img data-imgbigurl="img/listing/details/listing-details-1.jpg" src="img/listing/details/thumb-3.jpg" alt="">
+                                    <img data-imgbigurl="img/listing/details/listing-details-1.jpg" src="img/listing/details/thumb-4.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -265,8 +255,7 @@
                                     </div>
                                     <span>March 22, 2019</span>
                                     <h5>Marry Jane</h5>
-                                    <p>From ships to airports, museums to burger vans, from revered Michelin star
-                                        establish to the fleeting dynamism of pop-ups.</p>
+                                    <p>From ships to airports, museums to burger vans, from revered Michelin star establish to the fleeting dynamism of pop-ups.</p>
                                     <ul>
                                         <li><i class="fa fa-hand-o-right"></i> Like</li>
                                         <li><i class="fa fa-share-square-o"></i> Reply</li>
@@ -287,8 +276,7 @@
                                     </div>
                                     <span>March 22, 2019</span>
                                     <h5>Marry Jane</h5>
-                                    <p>From ships to airports, museums to burger vans, from revered Michelin star
-                                        establish to the fleeting dynamism of pop-ups.</p>
+                                    <p>From ships to airports, museums to burger vans, from revered Michelin star establish to the fleeting dynamism of pop-ups.</p>
                                     <ul>
                                         <li><i class="fa fa-hand-o-right"></i> Like</li>
                                         <li><i class="fa fa-share-square-o"></i> Reply</li>
@@ -309,8 +297,7 @@
                                     </div>
                                     <span>March 22, 2019</span>
                                     <h5>Marry Jane</h5>
-                                    <p>From ships to airports, museums to burger vans, from revered Michelin star
-                                        establish to the fleeting dynamism of pop-ups.</p>
+                                    <p>From ships to airports, museums to burger vans, from revered Michelin star establish to the fleeting dynamism of pop-ups.</p>
                                     <ul>
                                         <li><i class="fa fa-hand-o-right"></i> Like</li>
                                         <li><i class="fa fa-share-square-o"></i> Reply</li>
@@ -333,17 +320,14 @@
                     <div class="listing__sidebar">
                         <div class="listing__sidebar__contact">
                             <div class="listing__sidebar__contact__map">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24168.833995532765!2d-74.79633710628465!3d40.78172222265886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c384de7a5300b9%3A0x8afc61979217d49d!2sLong%20Valley%2C%20NJ%2007853%2C%20USA!5e0!3m2!1sen!2sbd!4v1586852528126!5m2!1sen!2sbd"
-                                    height="200" style="border:0;" allowfullscreen="" aria-hidden="false"
-                                    tabindex="0"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24168.833995532765!2d-74.79633710628465!3d40.78172222265886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c384de7a5300b9%3A0x8afc61979217d49d!2sLong%20Valley%2C%20NJ%2007853%2C%20USA!5e0!3m2!1sen!2sbd!4v1586852528126!5m2!1sen!2sbd"
+                                    height="200" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                                 <img src="img/listing/details/map-icon.png" alt="">
                             </div>
                             <div class="listing__sidebar__contact__text">
                                 <h4>Contacts</h4>
                                 <ul>
-                                    <li><span class="icon_pin_alt"></span> 236 Littleton St. New Philadelphia, Ohio,
-                                        United States</li>
+                                    <li><span class="icon_pin_alt"></span> 236 Littleton St. New Philadelphia, Ohio, United States</li>
                                     <li><span class="icon_phone"></span> (+12) 345-678-910</li>
                                     <li><span class="icon_mail_alt"></span> Info.colorlib@gmail.com</li>
                                     <li><span class="icon_globe-2"></span> https://colorlib.com</li>
@@ -405,8 +389,8 @@
                         <div class="footer__about__logo">
                             <a href="./index.html"><img src="img/footer-logo.png" alt=""></a>
                         </div>
-                        <p>Challenging the way things have always been done can lead to creative new options that reward
-                            you.</p>
+                        <p>Challenging the way things have always been done can lead to creative new options that reward you.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 col-md-6">
@@ -458,9 +442,15 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer__copyright">
-                        <div class="footer__copyright__text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                        <div class="footer__copyright__text">
+                            <p>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>
+                                    document.write(new Date().getFullYear());
+                                </script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
                         </div>
                         <div class="footer__copyright__links">
                             <a href="#">Terms</a>
