--- a/Front End/ThinhNQ/Source/job.html
+++ b/Front End/ThinhNQ/Source/job.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tất cả công việc</title>
+    <title>Tất cả công việc  | Tìm Việc Làm</title>
     <link rel="shortcut icon" href="https://cdn.worldvectorlogo.com/logos/bootstrap-4.svg" type="image/x-icon">
     <link rel="stylesheet" href="plugin/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="plugin/fontawesome/css/all.min.css">
@@ -1075,6 +1075,8 @@
     </div>
 
 
+
+
     <footer class="page-footer font-small mdb-color pt-4 mt-3">
 
 
@@ -1249,10 +1251,8 @@
                             <strong> Timvieclam.xyz</strong>
                         </a>
                     </p>
-
                 </div>
                 <div class="col-md-5 col-lg-4 ml-lg-0">
-
                     <div class="text-center text-md-right">
                         <ul class="list-unstyled list-inline">
                             <li class="list-inline-item">
@@ -1281,15 +1281,11 @@
             </div>
         </div>
     </footer>
-
-
-
     </div>
-
+    <script src="plugin/jquery/jquery-3.5.1.min.js"></script>
+    <script src="plugin/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
-<script src="plugin/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="plugin/jquery/jquery-3.5.1.min.js"></script>
-<script src="js/main.js"></script>
 <script>
     $(document).ready(function () {
         $('select').selectize({
