--- a/Front End/ThinhNQ/Source/job-detail.html
+++ b/Front End/ThinhNQ/Source/job-detail.html
@@ -132,8 +132,7 @@
                 <div class="col-2 mt-2 px-1">
                     <span class="ctn-icon text-white pl-2 search-job--input"><i class="fa fa-search"
                             aria-hidden="true"></i></span>
-                    <button type="submit" class="form-control search-job__input-submit btn btn-block btn-warning">Tìm
-                        Kiếm</button>
+                    <button type="submit" class="form-control search-job__input-submit btn btn-block btn-warning">Tìm Kiếm</button>
                 </div>
             </div>
         </div>
