--- a/Front End/ThinhNQ/Source/job.html
+++ b/Front End/ThinhNQ/Source/job.html
@@ -708,10 +708,39 @@
                                                             </p>
                                                             <p class="company mb-8">Công Ty Cổ Phần Tập Đoàn Hoa Sen</p>
                                                         </div>
-                                                        <div class="col-sm-3 text-right pt-2"><a href="#"
+                                                        <div class="col-sm-3 text-right mt-2"><a href="#"
+                                                                target="_blank" class="btn btn-default"><i class="fas fa-paper-plane fa-xs fa-flip-horizontal"></i> Ứng tuyển ngay</a></div>
+                                                        <div class="col-md-12">
+                                                            <div class="location text_ellipsis mb-1">
+                                                                <div class="row">
+                                                                    <div class="col-sm-3"><span class="dollar"><i class="li-cash-dollar"></i>15 triệu - 20 triệu</span></div>
+                                                                    <div class="col-sm-3"><i class="li-clock fs-12 mr-5"></i>&nbsp;21/10/2020
+                                                                    </div>
+                                                                    <div class="col-sm-3"> <i class="li-map-marker mr-5"></i>&nbsp;Hồ Chí Minh </div>
+                                                                </div>
+                                                            </div>
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="mt-15">
+                                                <div class="job-item-list">
+                                                    <div class="row">
+                                                        <div class="col-sm-9">
+                                                            <p class="j_title text_ellipsis mb-2">
+                                                                <a href="#" data-toggle="tooltip" target="_blank"
+                                                                    class="el-tooltip item">
+                                                                    <!---->
+                                                                    <strong class="fs-15">Nhân Viên Kinh Doanh Ngành
+                                                                        Hàng Gạch</strong>
+                                                                </a>
+                                                            </p>
+                                                            <p class="company mb-8">Công Ty Cổ Phần Tập Đoàn Hoa Sen</p>
+                                                        </div>
+                                                        <div class="col-sm-3 text-right"><a href="#"
                                                                 target="_blank" class="btn btn-default"><i
-                                                                    class="fas fa-paper-plane fa-xs fa-flip-horizontal"></i>Ứng
-                                                                tuyển ngay</a></div>
+                                                                    class="fas fa-paper-plane fa-xs fa-flip-horizontal"></i> Ứng tuyển ngay</a></div>
                                                         <div class="col-md-12">
                                                             <div class="location text_ellipsis mb-1">
                                                                 <div class="row">
